--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Prisem'20
 name: First International Workshop on Privacy and Security in Enterprise Modeling 
-description: <a href="http://www.edoc2020.org/" target="_blank">24nd IEEE International Enterprise Distributed Object Computing Conference, IEEE EDOC 2020</a> in Antwerp June 22-24, 2020.
+description: <a href="http://www.edoc2020.org/" target="_blank">24nd IEEE International Enterprise Distributed Object Computing Conference, IEEE EDOC 2020</a> in Eindhoven October 5-8, 2020.
 logo: /assets/img/profile.jpeg
 twitter_username: prisem-ws
 email: nicolas.herbaut@univ-paris1.fr, blagovesta.pirelli at epfl.ch
