--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: Prisem'20
 name: First International Workshop on Privacy and Security in Enterprise Modeling 
 description: <a href="http://www.edoc2020.org/" target="_blank">24nd IEEE International Enterprise Distributed Object Computing Conference, IEEE EDOC 2020</a> in Eindhoven October 5-8, 2020.
 logo: /assets/img/profile.jpeg
-twitter_username: prisem-ws
+twitter_username: PriSEM_WS
 email: nicolas.herbaut@univ-paris1.fr, blagovesta.pirelli at epfl.ch
 future: true
