--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Prisem'20
+title: PriSEM'20
 name: First International Workshop on Privacy and Security in Enterprise Modeling 
 description: <a href="http://www.edoc2020.org/" target="_blank">24nd IEEE International Enterprise Distributed Object Computing Conference, IEEE EDOC 2020</a> in Eindhoven October 5-8, 2020.
 logo: /assets/img/profile.jpeg
