--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: PriSEM'21
 name: Second International Workshop on Privacy and Security in Enterprise Modeling 
-description: <a href="http://www.edoc2020.org/" target="_blank">25nd IEEE International Enterprise Distributed Object Computing Conference, IEEE EDOC 2021</a> in Gold Coast, Australia, 25-29 October 2021
+description: <a href="http://ieee-edoc.org/2021/" target="_blank">25nd IEEE International Enterprise Distributed Object Computing Conference, IEEE EDOC 2021</a> in Gold Coast, Australia, 25-29 October 2021
 logo: /assets/img/profile.jpeg
 twitter_username: PriSEM_WS
 email: irina.rychkova@univ-paris1.fr, nicolas.herbaut@univ-paris1.fr, blagovesta.pirelli at epfl.ch
